src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>B2C Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Initial Contact</fullName>
        </values>
        <values>
            <fullName>Quote Given</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccNAme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_after_Discount__c</fullName>
        <formula>Amount - ( Amount  *  Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount after Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ByPassTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Created for VP of Sales to track losses and wins</description>
        <inlineHelpText>When you close the opportunity, chose one or more of the following reasons.</inlineHelpText>
        <label>Close Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Won for competitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost because of...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won for price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost because of......</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won because of..........</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commision__c</fullName>
        <description>Calculate sales per commision of 10% when opportunity is won.</description>
        <formula>IF( ISPICKVAL(  StageName  , &quot;Closed Won&quot;) ,  Amount  * 0.1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales rep commision when opportunity is won.</inlineHelpText>
        <label>Commision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comms_Rates__c</fullName>
        <label>Comms Rates</label>
        <picklist>
            <picklistValues>
                <fullName>Sourced ACV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influenced ACV / Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Referred / Qual AVC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comms__c</fullName>
        <formula>CASE( Percentage__c , null, 
IF(ISPICKVAL(Comms_Rates__c , &quot;Sourced ACV&quot;) &amp;&amp;  Account.Growth_Account__c , 0.06,
IF(ISPICKVAL( Comms_Rates__c , &quot;Sourced ACV&quot; ) &amp;&amp;  Account.Growth_Account__c=FALSE,0.1,
IF(ISPICKVAL( Comms_Rates__c , &quot;Influenced ACV / Strategic&quot;) &amp;&amp;  Account.Growth_Account__c,0.04,
IF(ISPICKVAL( Comms_Rates__c , &quot;Influenced ACV / Strategic&quot;) &amp;&amp;  Account.Growth_Account__c=FALSE,0.06,
IF( ISPICKVAL( Comms_Rates__c , &quot;SF Referred / Qual AVC&quot;) &amp;&amp;  Account.Growth_Account__c , 0.03,0.04)))))
,IF(ISPICKVAL(Comms_Rates__c , &quot;Sourced ACV&quot;) &amp;&amp;  Account.Growth_Account__c , 0.06,
IF(ISPICKVAL( Comms_Rates__c , &quot;Sourced ACV&quot; ) &amp;&amp;  Account.Growth_Account__c=FALSE,0.1,
IF(ISPICKVAL( Comms_Rates__c , &quot;Influenced ACV / Strategic&quot;) &amp;&amp;  Account.Growth_Account__c,0.04,
IF(ISPICKVAL( Comms_Rates__c , &quot;Influenced ACV / Strategic&quot;) &amp;&amp;  Account.Growth_Account__c=FALSE,0.06,
IF( ISPICKVAL( Comms_Rates__c , &quot;SF Referred / Qual AVC&quot;) &amp;&amp;  Account.Growth_Account__c , 0.03,0.04)))))+ Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comms Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Stage_Changed__c</fullName>
        <formula>Today()- Stage_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Stage Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Apply discount for opportunity</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>ExpiryDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If opportunity stage is closed then the opportunity should be inactive</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region_Zone__c</fullName>
        <formula>TEXT( Account.Region__c ) &amp;&quot;/&quot;&amp; TEXT( Account.Zone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region/Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesman__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesman</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Changed_Date__c</fullName>
        <label>Stage Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>B2B_Record_Type</fullName>
        <active>true</active>
        <businessProcess>B2B Sales Process</businessProcess>
        <label>B2B Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2C_Record_Type</fullName>
        <active>true</active>
        <businessProcess>B2C Sales Process</businessProcess>
        <label>B2C Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>TestRecordType</fullName>
        <active>true</active>
        <businessProcess>B2B Sales Process</businessProcess>
        <label>TestRecordType</label>
    </recordTypes>
    <validationRules>
        <fullName>BlockDates</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISPICKVAL( StageName, &quot;Closed Won&quot;), ISPICKVAL(StageName, &quot;Closed Lost&quot;))</errorConditionFormula>
        <errorMessage>You can&apos;t edit an opportunity that&apos;s already closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_reason_required</fullName>
        <active>true</active>
        <description>Close reason required whenever an opportunity is lost</description>
        <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Lost&quot; ) &amp;&amp;  ISBLANK( Close_Reason__c )</errorConditionFormula>
        <errorDisplayField>Close_Reason__c</errorDisplayField>
        <errorMessage>Close Reason is required when an opportunity is lost.</errorMessage>
    </validationRules>
</CustomObject>